<resources>
    <string name="app_name">StudHub</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="other">Other</string>
    <string name="entry_as">Entry as</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="click_back_to_exit">Click back button again to exit</string>

    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up_uppercase">SIGN UP</string>
    <string name="sign_up_normal">Sign Up</string>
    <string name="unique_code">Unique code</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="your_university">Your University</string>
    <string name="save">Save</string>
    <string name="choose_preferences">Choose your preferences</string>


</resources>