<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightSkyBlue">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_form"
            android:background="@drawable/shape_login_button"
            android:text="@string/login"
            app:backgroundTint="@null"
            android:elevation="18dp"
            android:stateListAnimator="@null"
            android:clickable="true"
            android:focusable="true"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorLightSkyBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/textView"
                android:layout_width="213dp"
                android:layout_height="141dp"
                android:src="@drawable/education"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/sign_up_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_normal"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:textSize="20sp"
            android:elevation="18dp"
            app:layout_constraintBottom_toTopOf="@+id/login_form"
            app:layout_constraintEnd_toEndOf="@+id/login_form" />


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorDarkGray"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:elevation="18dp"
            app:layout_constraintBottom_toTopOf="@+id/login_form"
            app:layout_constraintStart_toStartOf="@+id/login_form" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_view"
            app:layout_constraintVertical_bias="0.3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/unique_code"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>


                      <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/universities_dropDown"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/your_university"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownAnchor="@id/code"
                        android:dropDownHeight="340dp"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            style="@style/LeftCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_left_panel"
            app:cardElevation="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loader"
            android:layout_width="74dp"
            android:layout_height="67dp"
            android:elevation="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:mk_color="@color/colorBlue"
            app:mk_type="Whirlpool" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>